--- a/prezentare generala/prezentare.html
+++ b/prezentare generala/prezentare.html
@@ -16,7 +16,7 @@
             cartilor si de administrare a bazei de date.
         </p>
         <p>
-            Aplicatia isi propuna sa aiba un sistem de logare/autentificare, intrucat aproape nicio functie nu poate fi
+            Aplicatia isi propune sa aiba un sistem de logare/autentificare, intrucat aproape nicio functie nu poate fi
             realizata in mod anonim.
             De asemenea, este necesara existenta mai multor tipuri de utilizatori, mai exact utilizatori de tip client,
             de tip administrator (pentru baza de date) si de tip bibliotecar.
@@ -26,9 +26,10 @@
         <p>
             In cazul in care utilizatorul nu este autentificat, el poate alege intre doua variante: autentificare sau
             inregistrare. In cazul autentificarii, ii va aparea un formular in care i se va cere e-mailul si parola. In
-            cazul inregistrarii, va avea un formular de inscriere, care va contine cateva date personale, dintre care
-            unele obligatorii si altele nu. Vor fi cerute informatii despre tipul de utilizator dorit, iar, pentru
-            fiecare caz, vor fi cerute diferite informatii. In cazul administratorului sau a bibliotecarului, vor fi
+            cazul inregistrarii, va avea un formular de inscriere, care va contine cateva date personale. Vor fi cerute
+            informatii despre tipul de utilizator dorit, iar, pentru
+            fiecare caz, vor fi cerute diferite informatii (formularul va fi dinamic). In cazul administratorului sau a
+            bibliotecarului, vor fi
             cerute informatii care sa verifice adevarul functiei cerute.
         </p>
         <p>
@@ -51,7 +52,7 @@
                         primeste notificari cu privire la restituirea cartilor (in cadrul aplicatiei si pe e-mail)
                     </li>
                     <li>
-                        are, in cadrul contului, o lista cu toate cartile imprumutate
+                        are, in cadrul contului, o lista cu toate cartile imprumutate de-a lungul timpului
                     </li>
                 </ul>
             </li> <!-- sf facilitati client -->
@@ -71,9 +72,6 @@
                         poate accepta cererile de imprumut efectuate de clienti, in functie de valabilitatea cartii
                         cerute (si, implicit, sa trimita notificare de accept)
                     </li>
-                    <li>
-                        poate accepta rezervarea unor carti
-                    </li>
                 </ul>
             </li> <!-- sf facilitati bibliotecar -->
             <li class="utilizator">
@@ -85,20 +83,27 @@
                     <li>
                         poate adauga sau sterge titluri din baza de date
                     </li>
+                    <li>
+                        poate efectua orice tip de modificare asupra bazei de date
+                    </li>
                 </ul>
             </li> <!-- sf facilitati administrator -->
             <li class="utilizator">
                 Utilizatorul neautentificat:
                 <ul>
                     <li>
-                        poate vizualiza doar informatiile din paginile "Pagina principala", "Despre noi", "Informatii
-                        publice", "Contact" care nu necesita logare
+                        poate vizualiza doar informatiile din paginile "Acasa", "Despre noi", "Biblioteca fizica",
+                        "Biblioteca digitala", "Intrebari frecvente" care nu necesita logare
                     </li>
                     <li>
-                        nu poate imprumuta carti
+                        nu poate imprumuta carti si, implicit, nu poate vedea istoricul imprumuturilor si cartile
+                        favorite
                     </li>
                     <li>
                         nu poate vizualiza descrierile cartilor
+                    </li>
+                    <li>
+                        nu poate oferi review-uri niciunei carti din cadrul bibliotecii
                     </li>
                 </ul>
             </li> <!-- sf limitari neautentificat -->
@@ -113,9 +118,10 @@
         <img src="./UML4.png" alt="Diagrama UML" id="uml">
 
         <p>
-            Aceasta baza de date modeleaza relatiile dintre clienti si functiile bibliotecii, mai exact imprumutul si
-            rezervarea de carti. Baza de date contine, astfel, toate cartile puse la dispozitie de biblioteca si
-            informatii despre acestea, precum si informatii despre rezervarile si despre imprumuturile realizate de
+            Aceasta baza de date modeleaza relatiile dintre clienti si functiile bibliotecii, mai exact imprumutul,
+            acordarea de nota si adaugarea la favorite a unor carti. Baza de date contine, astfel, toate cartile puse la
+            dispozitie de biblioteca si
+            informatii despre acestea, precum si informatii despre imprumuturile realizate de
             clienti, in functie de care se calculeaza taxele de intarziere de retur, necesitatea notificarii clientului
             de a returna o carte imprumutata. De asemenea, in baza de date sunt retinute si review-urile utilizatorilor,
             pentru a putea calcula media generala a unei carti si pentru a putea afisa, in cadrul aplicatiei, lista de
